--- a/CheesewheelCollab/Packages/manifest.json
+++ b/CheesewheelCollab/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
+    "com.unidi.unidi": "https://github.com/Exanite/UniDi.git?path=Source",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.27",
