Add UniTask and UniRx
UniTask is needed for Exanite libraries
UniRx is added just in case

--- a/CheesewheelCollab/Packages/manifest.json
+++ b/CheesewheelCollab/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
+    "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
     "com.unidi.unidi": "https://github.com/Exanite/UniDi.git?path=Source",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.2d": "2.0.0",
