--- a/CheesewheelCollab/Assets/packages.config
+++ b/CheesewheelCollab/Assets/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CSMatIO" version="1.0.20" manuallyInstalled="true" />
   <package id="MathNet.Numerics" version="5.0.0" manuallyInstalled="true" />
 </packages>
