Add ppy SDL2-CS
Seems to be the same as Ethan Lee's official repo, just with NuGet publishing and binaries precompiled.

--- a/CheesewheelCollab/Assets/packages.config
+++ b/CheesewheelCollab/Assets/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CSMatIO" version="1.0.20" manuallyInstalled="true" />
   <package id="MathNet.Numerics" version="5.0.0" manuallyInstalled="true" />
+  <package id="ppy.SDL2-CS" version="1.0.82" manuallyInstalled="true" />
 </packages>
